--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,7 +9,6 @@
   }
   
   window#waybar {
-    /*background-color: #181825;*/
     background-color: transparent;
     transition-property: background-color;
     transition-duration: 0.5s;
@@ -25,11 +24,8 @@
   
   #workspaces button {
     all: initial;
-    /* Remove GTK theme values (waybar #1351) */
     min-width: 0;
-    /* Fix weird spacing in materia (waybar #450) */
     box-shadow: inset 0 -3px transparent;
-    /* Use box-shadow instead of border so the text isn't offset */
     padding: 6px 18px;
     margin: 6px 3px;
     border-radius: 4px;
@@ -48,11 +44,7 @@
     color: @color1;
     background-color: @foreground;
   }
-  
-  /*#workspaces button.urgent {*/
-  /*  background-color: #f38ba8;*/
-  /*}*/
-  
+   
   #temperature,
   #custom-notification,
   #custom-power,
@@ -88,16 +80,6 @@
     color: #1793d1;
   }
   
-  /*#temperature {*/
-  /*  background-color: @color11;*/
-  /*  color: @color1;*/
-  /*}*/
-  /**/
-  /*#battery {*/
-  /*  background-color: #6b7872;*/
-  /*  color: #99e99;*/
-  /*}*/
-  
   #battery.warning,
   #battery.critical,
   #battery.urgent {
@@ -106,7 +88,7 @@
   }
   
   #battery.charging {
-    background-color: #6b7872;
+    background-color: @color6;
     color: inherit;
   }
   
@@ -128,7 +110,6 @@
   #clock {
     font-family: JetBrainsMono Nerd Font;
     background-color: @color13;
-    /*color: @background;*/
   }
   
   #battery {
